--- a/public/css/app.css
+++ b/public/css/app.css
@@ -19257,3 +19257,9 @@ readers do not read off random characters that represent icons */
   font-weight: 400;
 }
 
+footer {
+  background-color: #f8fafc;
+  margin-bottom: -10px;
+  margin-top: 10px;
+}
+
