--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -12,3 +12,8 @@
 @import '~@fortawesome/fontawesome-free/scss/regular'		;
 @import '~@fortawesome/fontawesome-free/scss/solid'			;
 @import '~@fortawesome/fontawesome-free/scss/brands'		;
+footer{
+	background-color: rgba(248, 250, 252, 1);
+	margin-bottom: -10px;
+	margin-top: 10px;
+}
